# wallet

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile_test  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml
scripts/: start_project.sh
src/: conf.py  database.py  dependencies.py  main.py
src/api/v1/: routers.py
src/api/v1/endpoints/: wallet.py
src/crud/: wallet.py
src/migrations/: env.py
src/migrations/versions/: 757b26dba48d_init.py
src/models/: wallet.py
src/schemas/: wallet.py
src/services/: wallet.py
src/tests/: conftest.py  test_wallets.py
