[tool.poetry]
name = "wallet-app"
version = "0.1.0"
description = ""
authors = ["admin <purenkov.alex@yandex.ru>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12.8"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.39"
psycopg2-binary = "^2.9.10"
alembic = "^1.15.1"
pydantic = "^2.10.6"
pydantic-settings = "^2.8.1"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
